--- a/src/styles/globals/colors.scss
+++ b/src/styles/globals/colors.scss
@@ -5,11 +5,13 @@ $first-color-for-gradient: hsl(360, 72%, 65%);
 $second-color-for-gradient: hsl(235, 62%, 73%);
 $white: hsl(0, 0%, 96%);
 $black: hsla(0, 100%, 2%, 40%);
+$red: rgb(158, 63, 63);
 
 :root {
     --primary-bg-color: #{$white};
     --text-color: #{$dark-color};
     --loading-bg-color: #{$black};
+    --accent-color: #{$red};
 }
 
 @mixin gradient($attribute) {
