--- a/src/styles/globals/fonts.scss
+++ b/src/styles/globals/fonts.scss
@@ -1,8 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@300;400;500;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@300;400;500;600&family=Poppins:wght@300&display=swap');
 
 :root {
     //Fonts
     --font-general: 'Montserrat Alternates', sans-serif;
+    --font-secondary: 'Poppins', sans-serif;
 
     //Font-weights
     --font-light: 300;
