added add tour functionality

--- a/src/styles/components/tours.scss
+++ b/src/styles/components/tours.scss
@@ -29,6 +29,13 @@
             margin: 0 auto;
             margin-top: .5rem;
             font-family: var(--font-secondary);
+
+        }
+
+        .show-more-btn {
+            color: blue;
+            cursor: pointer;
+            font-weight: var(--font-semi-bold);
         }
         
         &_footer {
