--- a/src/styles/components/tours.scss
+++ b/src/styles/components/tours.scss
@@ -41,10 +41,23 @@
         &_footer {
             display: flex;
             justify-content: space-between;
+            align-items: center;
             max-width: 70%;
             margin: 0 auto;
             text-align: right;
             margin-top: 1rem;
+
+            .delete-btn-dtb {
+                background: transparent;
+                color: var(--text-color);
+                font-size: .6rem;
+                height: 2rem;
+
+                &:hover {
+                    background: var(--accent-color);
+                    color: var(--primary-bg-color);
+                }
+            }
 
             .tour_price {
                 font-size: 1.1rem;
